@@ -4048,10 +4048,10 @@ PHP_FUNCTION(array_product)
 		return;
 	}
 
-	if (!zend_hash_num_elements(Z_ARRVAL_P(input))) {
-		RETURN_LONG(0);
-	}
 	ZVAL_LONG(return_value, 1);
+	if (!zend_hash_num_elements(Z_ARRVAL_P(input))) {
+		return;
+	}
 
 	for (zend_hash_internal_pointer_reset_ex(Z_ARRVAL_P(input), &pos);
 		zend_hash_get_current_data_ex(Z_ARRVAL_P(input), (void **)&entry, &pos) == SUCCESS;
