@@ -25,7 +25,7 @@ foreach ($tests as $v) {
 --EXPECTF--	
 Warning: array_product() expects parameter 1 to be array, string given in %s on line %d
 NULL
-int(0)
+int(1)
 int(0)
 int(3)
 int(9)
